Fix layout bug
git-svn-id: https://svn.surfnet.nl/svn/coin-eb/static/trunk@1066 528793b8-127e-4309-9901-b74759c7208d

--- a/css/wide/screen.css
+++ b/css/wide/screen.css
@@ -429,7 +429,7 @@ table.formtable li {
 /* My Apps table */
 
 tr.detail-row {
-    border: 1px solid #DADADA;
+    border-right: 1px solid #DADADA;
 }
 
 div.attribute-table-wrapper {
